--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body class="bg-black">
-    <div id="app" class="grid place-items-center"></div>
+    <div id="app" class="flex flex-col justify-center items-center"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
