--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-black">
+  <body class="bg-[#0e1826]">
     <div id="app" class="flex flex-col justify-center items-center"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
