--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Birdle</title>
   </head>
-  <body class="bg-black">
-    <div id="app" class="grid place-items-center"></div>
+  <body class="bg-[#0e1826] h-full">
+    <div id="app" class="flex flex-col justify-center items-center w-full h-full"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
